// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component renders selected card 1`] = `
<div
  className="card card--selected"
  onClick={null}
>
  <svg
    className="card__indicator"
    viewBox="0 0 100 100"
    x="0px"
    xmlns="http://www.w3.org/2000/svg"
    y="0px"
  >
    <path
      d="M100,50c0,27.6-22.4,50-50,50s-50-22.4-50-50S22.5,0,50,0S100,22.4,100,50z M50,8.3C27,8.3,8.4,27,8.4,50S27,91.6,50,91.6 S91.7,73,91.7,50S73,8.3,50,8.3z"
    />
    <polygon
      className="tick"
      points="30.8,43 45.3,57.2 69,32.1 77.4,40.6 46.3,73.8 22.7,51.6"
    />
  </svg>
  <div>
    <h1
      className="card__label"
    >
      name
    </h1>
    <div
      className="card__attributes"
    >
      <h5
        className="card__attribute"
        key="0"
      >
        age
        :
         
        33
      </h5>
      <h5
        className="card__attribute"
        key="1"
      >
        fullname
        :
         
        full name
      </h5>
    </div>
  </div>
</div>
`;

exports[`Card component renders unselected card 1`] = `
<div
  className="card"
  onClick={null}
>
  <svg
    className="card__indicator"
    viewBox="0 0 100 100"
    x="0px"
    xmlns="http://www.w3.org/2000/svg"
    y="0px"
  >
    <path
      d="M100,50c0,27.6-22.4,50-50,50s-50-22.4-50-50S22.5,0,50,0S100,22.4,100,50z M50,8.3C27,8.3,8.4,27,8.4,50S27,91.6,50,91.6 S91.7,73,91.7,50S73,8.3,50,8.3z"
    />
    <polygon
      className="tick"
      points="30.8,43 45.3,57.2 69,32.1 77.4,40.6 46.3,73.8 22.7,51.6"
    />
  </svg>
  <div>
    <h1
      className="card__label"
    >
      name
    </h1>
    <div
      className="card__attributes"
    >
      <h5
        className="card__attribute"
        key="0"
      >
        age
        :
         
        33
      </h5>
    </div>
  </div>
</div>
`;
